k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: testwebapp
  name: test-app-svc
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
