k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: testwebapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.keruserver-prometheus.site
      secretName: test-app-tls
  rules:
    - host: test.keruserver-prometheus.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-svc
                port:
                  number: 8080
